<resources>
    <string name="app_name">Just Diary</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="vcName">PROFESSOR DR. M. ANWAR HOSSAIN</string>
    <string name="vc">VICE CHANCELLOR</string>
    <string name="Message">Message From Vice-Chancellor</string>
    <string name="uniName">Jessore University of Science and Technology</string>
    <string name="districtName">Jessore, Bangladesh</string>
    <string name="mainMessage">
        It is my great pleasure to invite you to explore the Jessore University of Science and Technology (JUST) online through our website. Contribution of science and technology for developing a nation is well known to all. To meet up the diversified demand of people, information and communication technology and biological sciences are playing the key role. University is the most suitable place for education and research. Universities are playing a vital role in building efficient manpower for the development of the country as well as for the global need. With a view to imparting science and technology oriented education in Bangladesh, the Jessore University of Science and Technology was established in 2007 by the Shadhinota Shorok (Independence Road) in Jessore district. The first batch of students was admitted in 2008-2009 session. The honorable Prime Minister of the People’s Republic of Bangladesh, Sheikh Hasina, inaugurated the campus of the university on December 27, 2010.
        Within a very short period, the JUST already demonstrated its outreach excellence through establishing linkages with the various government and non-government organizations for research, extension and developmental activities. Our honorable Prime Minister has already declared the Vision 2021 for the digitization (advance technology based, economically developed, corruption free) of the country, Bangladesh. I strongly believe that this university will play a significant role to fulfil this vision by producing science and technology based efficient manpower and enlightened citizen. We always adapt the positive changes which is the need of time. Thus, by using this science and technological knowledge we are motivated to boost up the world’s technology. As the Vice Chancellor of the Jessore University of Science and Technology, I congratulate all and wish its success in future.

    </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="DeleteNote">Are you Sure?</string>
    <string name="welcome">Welcome To JUST Diary</string>
    <string name="title_activity_maps">Map</string>
</resources>
